--- a/.babelrc
+++ b/.babelrc
@@ -3,8 +3,9 @@
     [
       "@babel/env",
       {
-        browsers: ["> 1%", "last 2 versions"],
-        useBuiltIns: "usage"
+        targets: {
+          node: "current"
+        }
       }
     ],
     "@babel/react"
