--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "react google maps component",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc --emitDeclarationOnly && babel src --out-dir lib --extensions \".ts,.tsx\"",
+    "clean": "rm -rf lib",
+    "build": "npm run clean && tsc --emitDeclarationOnly & babel src --out-dir lib --extensions \".ts,.tsx\"",
     "type-check": "tsc --noEmit",
     "storybook": "start-storybook -p 9001 -c stories",
-    "test": "jest"
+    "test": "jest",
+    "precommit": "lint-staged",
+    "postcommit": "git update-index --again"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": ["prettier --parser typescript --write", "git add"]
   },
   "repository": {
     "type": "git",
@@ -42,6 +48,8 @@
     "@storybook/react": "^4.0.0-alpha.8",
     "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.1.3",
     "prettier": "^1.13.4",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
