--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "postcommit": "git update-index --again"
   },
   "lint-staged": {
-    "*.{ts,tsx}": ["prettier --parser typescript --write", "git add"]
+    "*.{ts,tsx}": [
+      "prettier --parser typescript --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -51,7 +54,6 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.1.3",
     "prettier": "^1.13.4",
-    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-dom": "^16.4.0",
